<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    tools:context=".presentation.screen.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.example.skillcinema.presentation.customViews.horizontalListView.filmListWithClearFooter.FilmListWithClearFooterView
            android:id="@+id/viewed_collection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title_text="@string/viewed" />

        <TextView
            style="@style/TitleListText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:layout_marginVertical="@dimen/borders"
            android:text="@string/collections" />

        <TextView
            android:id="@+id/create_collection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:clickable="true"
            android:drawablePadding="@dimen/borders"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingVertical="@dimen/borders"
            android:text="@string/create_new_collection"
            app:drawableStartCompat="@drawable/button_add_collection" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/collections_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:itemCount="3"

            tools:listitem="@layout/item_collection_card" />

        <com.example.skillcinema.presentation.customViews.horizontalListView.filmListWithClearFooter.FilmListWithClearFooterView
            android:id="@+id/interested_collection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title_text="@string/interested" />
    </LinearLayout>

</ScrollView>