<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".presentation.screen.search.setParams.SearchParametersFragment">

        <TextView
            style="@style/hint_at_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:layout_marginVertical="@dimen/borders"
            android:text="@string/showing" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/select_show_films"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:layout_marginBottom="@dimen/borders"
            android:gravity="center"
            android:orientation="horizontal"
            app:checkedButton="@id/show_all_films"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/show_all_films"
                style="@style/CustomToggleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/all" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/show_only_films"
                style="@style/CustomToggleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/films"
                app:shapeAppearance="@style/RoundedShapeAppearance" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/show_only_serials"
                style="@style/CustomToggleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/serials"
                app:shapeAppearance="@style/RoundedShapeAppearance" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <LinearLayout
            android:id="@+id/select_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/borders">

            <TextView
                style="@style/ItemSimpleString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/country" />

            <TextView
                android:id="@+id/selected_country"
                style="@style/selected_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/not_selected"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/semi_transparent_gray" />

        <LinearLayout
            android:id="@+id/select_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/borders">

            <TextView
                style="@style/ItemSimpleString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/genre" />

            <TextView
                android:id="@+id/selected_genre"
                style="@style/selected_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/not_selected"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/semi_transparent_gray" />

        <LinearLayout
            android:id="@+id/select_years"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/borders">

            <TextView
                style="@style/ItemSimpleString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/year" />

            <TextView
                android:id="@+id/selected_years"
                style="@style/selected_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/any"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/semi_transparent_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/borders">

            <TextView
                style="@style/ItemSimpleString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/rating" />

            <TextView
                android:id="@+id/selected_rating"
                style="@style/selected_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/any"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rating_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:stepSize="1"
            android:valueFrom="0"
            android:valueTo="10"
            app:labelBehavior="gone"
            app:labelStyle="@style/selected_value"
            app:tickVisible="false" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:layout_marginBottom="@dimen/borders"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rating_from"
                style="@style/selected_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="0"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/rating_to"
                style="@style/selected_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="10"
                tools:ignore="HardcodedText" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/semi_transparent_gray" />

        <TextView
            style="@style/hint_at_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:layout_marginVertical="@dimen/borders"
            android:text="@string/sort_by" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/select_sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:layout_marginBottom="@dimen/borders"
            android:gravity="center"
            android:orientation="horizontal"
            app:checkedButton="@id/sort_by_rating"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sort_by_date"
                style="@style/CustomToggleButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sort_by_popularity"
                style="@style/CustomToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popularity" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sort_by_rating"
                style="@style/CustomToggleButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rating" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/semi_transparent_gray" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/is_show_not_viewed"
            style="@style/ItemSimpleString"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:layout_marginVertical="@dimen/borders"
            android:background="@color/transparent"
            android:checkable="true"
            android:drawablePadding="24dp"
            android:padding="@dimen/small_borders"
            android:text="@string/show_only_not_viewed"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            app:icon="@drawable/button_viewed_false"
            app:iconTint="@color/black" />

    </LinearLayout>
</ScrollView>