<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:contentDescription="@string/close"
        android:paddingHorizontal="@dimen/error_dialog_margin"
        android:paddingTop="@dimen/error_dialog_margin"
        app:srcCompat="@drawable/button_close" />

    <EditText
        style="@style/NewCollectionName"
        android:id="@+id/new_collection_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:hint="@string/hint_new_collection_name"
        android:importantForAutofill="no"
        android:inputType="textCapSentences" />

    <Button
        android:id="@+id/done_button"
        style="@style/DialogDoneButtonText"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="end"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/borders"
        android:layout_marginBottom="@dimen/horizontal_margin"
        android:background="@drawable/button_new_collection"
        android:paddingHorizontal="@dimen/button_horizontal_padding"
        android:paddingVertical="@dimen/button_vertical_padding"
        android:text="@string/done" />

</LinearLayout>