<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.screen.search.setParams.SetYearsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/horizontal_margin"
        tools:context=".presentation.screen.search.setParams.SetYearsFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/borders"
            android:text="@string/search_in_period_from" />

        <com.example.skillcinema.presentation.customViews.YearSelector
            android:id="@+id/years_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/borders"
            tools:layout="@layout/view_year_change_list" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/borders"
            android:text="@string/search_in_period_to" />

        <com.example.skillcinema.presentation.customViews.YearSelector
            android:id="@+id/years_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/borders"
            tools:layout="@layout/view_year_change_list" />

        <Button
            android:id="@+id/select_years"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/select_years" />
    </LinearLayout>
</ScrollView>